2007-12-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/README: updated notes

2007-12-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* unix/tclUnixCompat.c (TclpGetHostByName): Really applied
	the change noted on 2007-11-13 by dkf below.

2007-12-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOUtil.c (TclGetOpenMode): Only set the O_APPEND flag
	* tests/ioUtil.test (ioUtil-4.1):	on a channel for the 'a'
	mode and not for 'a+'. [Bug 1773127] (backport from HEAD)

2007-12-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCmdIL.c (Tcl_LsearchObjCmd): Prevent shimmering crash
	when -exact and -integer/-real are mixed. [Bug 1844789]

2007-11-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tclWinSock.c (Tcl_GetHostName): update to previous fix to
	set hostname length appropriately, clean up check overall.

2007-11-27  Don Porter  <dgp@users.sourceforge.net>

	* win/tclWinSock.c:	Add missing encoding conversion of the
	[info hostname] value from the system encoding to Tcl's internal
	encoding.  This is important now that ICANN no longer limits host
	names to ASCII.  [Bug 1823552]

2007-11-26  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclThread.c: Back-port locking changes from Tcl8.5
	in Tcl_Mutex/ConditionFinlize. Now we properly master-lock
	the finalization of sync primitives.

2007-11-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/regc_nfa.c:	Fixed infinite loop in the regexp compiler
	* generic/regcomp.c:	[Bug 1810038].  Corrected looping logic in
	* tests/regexp.test:	fixempties() to avoid wasting time walking a
	list of dead states [Bug 1832612].  Convert optst() from expensive
	no-op to a cheap no-op.  Improve newline usage in debug output.

2007-11-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/tclUnixCompat.c (TclpGetHostByName): The six-argument form of
	getaddressbyname_r() uses the fifth argument to indicate whether the